--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
+.App{
+  height: 100vh;
+  background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conteiner{
+  height: fit-content;
+  width: 350px;
+  background-color: #DABECA;
+  border-radius: 15px;
+  padding: 10px 10px 15px 10px;
+  font-family: 'Golos Text', sans-serif;
+  box-shadow: 2px 2px 2px 1px  rgba(0, 0, 0, 0.578);
+}
+
+.conteiner h1{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputs{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 2%;
 }
 
-.App-link {
-  color: #61dafb;
+.inputs input{
+  border-radius: 5px;
+  border: 1px solid black;
+  margin-right: 5px;
+  text-indent: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
+.inputs button{
+  padding: 3px;
+  border-radius: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #ffffff81;
+}
+
+.loading{
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  padding: 5px;
+}
+
+.loading-circle{
+  height: 25px;
+  width: 25px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 6px solid blue;
+  border-top: 6px solid transparent;
+  animation: 1s ease-in-out infinite loadingAnime;
+}
+
+.result{
+  margin: 7%;
+  font-size: 1.2rem;
+}
+
+
+.city-name{
+  font-size: 1.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.city-weather{
+  margin-top: -2%;
+  margin-bottom: -2%;
+  display: flex;
+  align-items: center;
+}
+
+h2{
+  display: inline;
+  font-size: 1.5rem;
+}
+
+.imgFlag{
+  display: flex;
+  height: 25px;
+  width: 35px;
+  margin-left: 2%;
+}
+
+.imgWeather{
+  margin-top: 2%;
+  height: 35px;
+  width: 40px;
+}
+
+img{
+  height: 100%;
+  width: 100%;
+}
+
+p{
+  margin-top: 2%;
+}
+
+@keyframes loadingAnime {
+  0%{
     transform: rotate(0deg);
   }
-  to {
+  100%{
     transform: rotate(360deg);
   }
 }
